[DashboardApp][CHN-341] Change Summary page from mock to live data using BusinessApp to render contents. Register new charting components from IB. Fix page content covering page footer. Add optional ability to make BusinessApp content to have a white background.

--- a/DashboardApp/src/styles/antd.overrides.scss
+++ b/DashboardApp/src/styles/antd.overrides.scss
@@ -9,3 +9,12 @@
 .label-wrapper .ant-progress-line {
   padding-right: 15px;
 }
+
+/*
+ * Fix for layout covering footer. Ant value was zero,
+ * causing <Main> wrapping component to be too short
+ * and content overflowed the container covering the footer.
+ */
+.ant-layout-content {
+  min-height: initial !important;
+}
